tests/wormhole/sfpi/gold/warn_pop.txt
warn.cc: In function 'void popwithoutpush()':
warn.cc:78:28: error: malformed program, popc without matching pushc
   78 |     __builtin_riscv_sfppopc();
      |     ~~~~~~~~~~~~~~~~~~~~~~~^~
warn.cc:76: confused by earlier errors, bailing out
